Fixing of footer on mobile

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -193,33 +193,52 @@ header nav {
 
 footer {
 	.footer-main {
+		align-items: center;
 		background-color: $black;
+		display: flex;
+		flex-wrap: wrap;
 		font-size: 1.4rem;
 
 		.footer-main-block1, .footer-main-block2, .footer-main-block3 {
+			flex-grow: 1;
+			flex-shrink: 1;
 			line-height: 1.4rem;
 			padding-top: $spacer / 2;
 			padding-bottom: $spacer / 2;
+			text-align: center;
 		}
 
 		.footer-main-block1 {
-			text-align: left;
+			@media screen and (min-width: 39.9376em) {
+				text-align: left;
+			}
 
 			.logo {
-				height: 1.2rem;
 				margin: 0;
-				width: auto;
+				width: 100%;
+
+				@media screen and (max-width: 39.9375em) {
+					width: 80%;
+				}
 			}
 		}
 
 		.footer-main-block2 {
-			line-height: 1.4rem;
 			text-align: center;
+			white-space: nowrap;
 		}
 
 		.footer-main-block3 {
-			ul {
-				float: right;
+			@media screen and (max-width: 39.9375em) {
+				ul {
+					display: flex;
+					justify-content: center;
+				}
+			}
+			@media screen and (min-width: 39.9376em) {
+				ul {
+					float: right;
+				}
 			}
 		}
 	}
